Aktualizace projektu knihovna funkční CRUD systém

--- a/config/common.neon
+++ b/config/common.neon
@@ -11,7 +11,7 @@ application:
 
 
 database:
-	dsn: 'mysql:host=127.0.0.1;port=8889;dbname=knihovna'
+	dsn: 'mysql:host=127.0.0.1;port=8889;dbname=library'
 	user: 'root'
 	password: 'root'
 
